Switch to ZGC garbage collector