@@ -552,6 +552,7 @@ jlink {
     addOptions('--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages')
     launcher {
         name = 'JabRef'
+        jvmArgs = ['-Xmx4g', '-XX:+UseZGC']
     }
 
     addOptions("--bind-services")
